--- a/templates/_file_row.html
+++ b/templates/_file_row.html
@@ -5,13 +5,19 @@
     <td>{{ file.download_count }}{% if file.max_downloads %} / {{ file.max_downloads }}{% endif %}</td>
     <td>{% if file.expires_at %}{{ file.expires_at | timeago }}{% else %}never{% endif %}</td>
     <td>{{ file.created_at | timeago }}</td>
-    <td>
+    <td style="white-space: nowrap;">
         <button
-            class="btn-delete"
+            class="btn-action btn-copy"
+            onclick="copyLink(this, '{{ file.code }}', '{{ file.filename }}')"
+            title="Copy download link"
+        >&#128203;</button>
+        <button
+            class="btn-action btn-delete"
             hx-delete="/api/files/{{ file.code }}/htmx"
             hx-target="#file-{{ file.code }}"
             hx-swap="outerHTML swap:0.3s"
             hx-confirm="Delete {{ file.filename }}?"
+            title="Delete file"
         >&#10005;</button>
     </td>
 </tr>
