--- a/templates/base.html
+++ b/templates/base.html
@@ -20,5 +20,14 @@
     <div class="container">
         {% block content %}{% endblock %}
     </div>
+    <script>
+    function copyLink(btn, code, filename) {
+        const url = location.origin + '/' + code + '/' + filename;
+        navigator.clipboard.writeText(url).then(() => {
+            btn.textContent = '\u2713';
+            setTimeout(() => { btn.textContent = '\uD83D\uDCCB'; }, 1500);
+        });
+    }
+    </script>
 </body>
 </html>
